apps/dev/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      containers:
        - name: web
          image: ghcr.io/gethomepage/homepage:v2.1.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
      volumes:
        - name: config-src
          configMap:
            name: homepage-config
        - name: config
          emptyDir: {}
