apps/dev/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: homepage
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
